# some-game-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  Game.cc  Game.h  Makefile  README.md  main.cc
inc/: Config.h  Game.h  Makefile  keys.h
src/: CMakeLists.txt  Config.cc  Game.cc  Makefile  main.cc
